# Lavori

./: README.md
selly/: .gitignore  LICENSE  README.md  pyproject.toml
selly/docs/: F1_SANDBOX_REPORT_TEMPLATE.md
tesi-2.0/: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  PROGRESS.md  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  requirements_docker.txt
tesi-2.0/analysis/: __init__.py  bench_steps.py  compare_runs.py  cross_dataset_eval.py  fdr_helper.py  optimize_hot_path.py  profile_bench.py  stats_utility.py
tesi-2.0/cli/: __init__.py  main.py
tesi-2.0/common/: __init__.py  broadcast.py  config_validator.py  dispatcher_base.py  hb_lib.py  logger.py  paths.py  progress.py  queue_lib.py  reproducibility.py  run_id.py  run_schema.py  state_lib.py
tesi-2.0/config/: config.schema.json  config_base.py  config_step1_matchingpennies.py  config_step2_source_matchingpennies.py  dataset_lemon.py  labels_ds005385.py  labels_phenotype.py  labels_phenotype_ds004504.py  subjects_whitelist.py  subjects_whitelist_n100.py  subjects_whitelist_n179.py  subjects_whitelist_n30.py  subjects_whitelist_n50.py
tesi-2.0/connectivity/: __init__.py  fc_dispatcher.py  run_fc_on_epochs.py
tesi-2.0/dashboard/: README.md  __init__.py  app.py  plot_top_features.py  requirements.txt
tesi-2.0/docs/: HANDOVER.md  HANDOVER_GUIDE.md  OSF_PREREG_FASE3.md  PIPELINE_OVERVIEW.md  TAGS.md
tesi-2.0/features/: __init__.py  aperiodic_fooof.py  dispatcher.py  graph_theory.py
tesi-2.0/ml_training/: __init__.py  aggregate_n15.py  feature_comparison.py  ml_age.py  ml_dispatcher.py  ml_sex.py  permutation.py
tesi-2.0/parcellation/: __init__.py  extract_label_tc.py  neuromaps_helper.py
tesi-2.0/pipeline_mne_bids/: __init__.py  run_bench_matrix.py  run_e2e_matchingpennies.py  run_with_timeout.py
tesi-2.0/reports/: AGE_SEX_FASE3_N179.md  AGE_SEX_VALIDITY.md  API_DOCS_GUIDE.md  BASELINE_COMPARISON.md  BENCH_MATRIX_RESULTS.json  BENCH_REPLICABILITY.md  CLEANUP_AUDIT_2026-05-07.md  CLEANUP_LOG.md  COVERAGE.md  CROSS_DATASET_TRANSFER.md  DATASET_SUBJECT_AUDIT.md  DATA_AUDIT.md  DEEP_REVIEW_STEP3_band5-9_T01.md  DELIVERABLES_AUDIT.md  DISCUSSION_v3.md  DS005385_STRUCTURE.md  EXPERIMENTS_MINIMAL.md  EXPERIMENTS_N15.md  EXPERIMENTS_N50.md  FEATURES_AUDIT.md  FIGURES_N15.md  FINAL_VALIDATION.md  HB_PATTERN_VAULT_IMPORT.md  INTEGRATION_TEST.md  LEMON_DOWNLOAD_AUDIT.md  PERF_BASELINE.json  PERF_BENCHMARK.md  PERF_PROFILE.md  PIPELINE_LEAKAGE_AUDIT.md  PROFILE_STATS.txt  SCIENTIFIC_PIPELINE_STATUS.md  SKILL_PATTERN_EVAL.md  STEP1_LOG.md  (+21 more)
(+161 files in other folders)
