[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selly"
version = "0.0.1"
description = "AI commerciale auto-arbitrage trend-driven — riusa Vesta come dipendenza cognitiva"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Samuele", email = "ouroborosoracle@gmail.com" },
]
keywords = ["arbitrage", "ai", "commerce", "trend-detection", "marketplace"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "vesta @ git+ssh://git@github.com/OracleCLM/Vesta.git@main",
    "playwright>=1.49",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "rich>=13.9",
    "click>=8.1",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "chromadb>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

sandbox = [
    "pytrends>=4.9",
    "pytest-asyncio>=0.24",
]

bank = [
    "tink-rest-client>=2.0",
]

[project.scripts]
selly-sandbox = "selly.sandbox.orchestrator:main"

[project.urls]
Homepage = "https://github.com/Seraxel97/Selly"
Repository = "https://github.com/Seraxel97/Selly"
Issues = "https://github.com/Seraxel97/Selly/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["selly*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short --strict-markers"
asyncio_mode = "auto"
markers = [
    "sandbox: sandbox simulation tests (no real money)",
    "live: live trading tests (REQUIRE operator approval flag)",
    "slow: tests slower than 5s",
]
